<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagformFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/nameTag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="Name"
            app:layout_constraintTop_toBottomOf="@id/nameText" />

        <TextView
            android:id="@+id/timeTag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="Time"
            app:layout_constraintTop_toBottomOf="@id/timeText" />

        <TextView
            android:id="@+id/locationTag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="Location"
            app:layout_constraintTop_toBottomOf="@id/locationText" />

        <TextView
            android:id="@+id/personTag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="Person"
            app:layout_constraintTop_toBottomOf="@id/personText" />

        <TextView
            android:id="@+id/uriTag"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="uri"
            app:layout_constraintTop_toBottomOf="@id/uriText" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/time"
            app:layout_constraintTop_toBottomOf="@id/nameTag"/>

        <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/timeTag"/>

        <TextView
            android:id="@+id/personText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/person"
            app:layout_constraintTop_toBottomOf="@id/locationTag"/>


        <TextView
            android:id="@+id/uriText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/uri"
            app:layout_constraintTop_toBottomOf="@id/personTag"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>