<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagformFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/nameString"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/nameString" />

            <TextView
                android:id="@+id/timeString"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/time"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <!-- TODO: Update blank fragment layout -->
            <!--    <TextView-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="match_parent"-->
            <!--        android:text="@string/hello_blank_fragment" />-->

            <EditText
                android:id="@+id/editField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/timeString" />

            <Button
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editField"


                />

            <TextView
                android:id="@+id/placeString"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/location"
                app:layout_constraintTop_toBottomOf="@+id/dateButton" />

            <Spinner
                android:id="@+id/spinnerplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placeString" />

            <TextView
                android:id="@+id/personString"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/person"
                app:layout_constraintTop_toBottomOf="@+id/spinnerplace" />

<!--            <EditText-->
<!--                android:id="@+id/editPerson"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:gravity="top|left"-->
<!--                android:scrollbars="vertical"-->
<!--                app:layout_constraintTop_toBottomOf="@id/personString" />-->

<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/editPerson"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:gravity="top|left"-->
<!--                android:scrollbars="vertical"-->
<!--                app:layout_constraintTop_toBottomOf="@id/personString"-->
<!--                />-->


            <LinearLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear_layout">

                <AutoCompleteTextView
                    android:id="@+id/edit_person"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    app:layout_constraintTop_toBottomOf="@id/personString"
                    />


            </LinearLayout>



            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:text="Add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personString"


                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    >
</FrameLayout>