<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TagformFragment"
    >
    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <RadioButton
            android:id="@+id/radio_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/time" />

        <RadioButton
            android:id="@+id/radio_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/location" />

        <RadioButton
            android:id="@+id/radio_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/person" />

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/none" />
    </RadioGroup>

    <EditText
        android:id="@+id/txt_date_1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        />

    <Button
        android:id="@+id/btn_selected_date_1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_hello"
        android:text="From"
        android:clickable="false"
        app:layout_constraintLeft_toRightOf="@id/txt_date_1"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        />

    <EditText
        android:id="@+id/txt_date_2"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@id/btn_selected_date_1"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        />

    <Spinner
        android:id="@+id/spinnerplace_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroup"/>

    <Button
        android:id="@+id/btn_selected_date_2"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_hello"
        android:clickable="false"
        android:text="Okay"
        app:layout_constraintLeft_toRightOf="@id/txt_date_2"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        />

    <EditText
        android:id="@+id/txt_person"
        android:visibility="invisible"
        android:layout_marginLeft="20sp"
        android:hint="People_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        />
</FrameLayout>